# home-assistant-indra-v2h

./: .gitignore  HACS_SETUP.md  README.md  TESTING.md  hacs.json  inspect_pyindrav2h.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_pyindrav2h_api.py
.github/workflows/: hacs.yml  hassfest.yml
custom_components/indra_v2h/: README.md  __init__.py  client.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  select.py  sensor.py  services.yaml
custom_components/indra_v2h/translations/: strings.json
